--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ img {
   font-size: 16px;
   line-height: 150%;
   color: #f5f5f5;
+  margin-bottom: 0;
 }
 .email p,
 .LinkedIn p {
@@ -136,10 +137,7 @@ img {
     background: #161619;
     border-radius: 0px 0px 10px 10px;
 }
-.footer img{
-    width: 30px;
-    height: 30px;
-    border-radius: 2px;
-    margin-left: 10px;
-    margin-right: 10px;
+.reactIcons{
+  margin: 10px;
+  font-size: 20px;
 }
